/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.4.1/userguide/java_library_plugin.html
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'org.blacksmith'
version = '0.1.2'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

repositories {
    mavenLocal()
    jcenter()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.10'
    testCompile 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.10'
    implementation 'org.blacksmith:blacksmith-commons:0.1.2'
    implementation 'org.blacksmith:blacksmith-finlib-basic:0.1.2'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0'

    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    testCompile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.1.0'
    testImplementation 'io.cucumber:cucumber-java:5.7.0'
    testImplementation 'io.cucumber:cucumber-junit:5.7.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.6.2'
    testImplementation 'org.hamcrest:hamcrest-library:2.1'
    testImplementation 'org.blacksmith:blacksmith-test:0.1.0'
    testImplementation 'org.decimal4j:decimal4j:1.0.3'
    testImplementation 'org.apache.commons:commons-math3:3.5'
}

configurations {
    cucumberRuntime {
        extendsFrom testImplementation
    }
}

jar {
    manifest {
        attributes('Implementation-Title': project.name,
                'Implementation-Version': project.version)
    }
}

task sourceJar(type: Jar) {
    from sourceSets.main.allJava
}

task cucumber() {
    dependsOn assemble, compileTestJava
    doLast {
        javaexec {
            main = "io.cucumber.core.cli.Main"
            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
            args = ['--plugin', 'pretty', '--glue', 'org.blacksmith.finlib.cucumber', 'src/test/resources/features']
        }
    }
}


publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            artifact sourceJar {
                classifier "sources"
            }
        }
    }
    repositories {
        mavenLocal()
    }
}

test {
    useJUnitPlatform()
}
